add deletion of pdb to build events

--- a/Source/MiscMats/MiscMats.csproj
+++ b/Source/MiscMats/MiscMats.csproj
@@ -57,4 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>del *.pdb</PostBuildEvent>
+  </PropertyGroup>
 </Project>
