--- a/Source/MiscMats/MiscMats.csproj
+++ b/Source/MiscMats/MiscMats.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>del *.pdb</PostBuildEvent>
+    <PostBuildEvent>del *.pdb
+copy * "C:\Program Files (x86)\Steam\steamapps\common\RimWorld\Mods\Misc Mats\1.1\Assemblies"</PostBuildEvent>
   </PropertyGroup>
 </Project>
