--- a/Source/MiscMats/MiscMats.csproj
+++ b/Source/MiscMats/MiscMats.csproj
@@ -32,9 +32,14 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.0.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lib.Harmony.2.0.2\lib\net472\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="D9Framework">
+      <HintPath>..\..\..\D9 Framework\1.2\Assemblies\D9Framework.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -57,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HediffComp_Trip.cs" />
+    <Compile Include="Patch_MythrilWeaponCrafted.cs" />
+    <Compile Include="QualityChangeComp.cs" />
     <Compile Include="ThoughtWorker_Trip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
